Email system, templates, better README, other optimizations

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,24 @@
 # Database (Neon)
 DATABASE_URL="postgresql://user:password@host/database?sslmode=require"
 
-# Better Auth
-BETTER_AUTH_SECRET="run: openssl rand -base64 32"
-BETTER_AUTH_URL="http://localhost:3000"
+# NextAuth
+NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_SECRET="run: openssl rand -base64 32"
 
-# Better Auth Client (public)
-NEXT_PUBLIC_BETTER_AUTH_URL="http://localhost:3000"
+# Email System
+# Provider: "mock" (development) or "resend" (production)
+EMAIL_PROVIDER="mock"
+
+# Resend Configuration (required for production emails)
+# Get your API key from https://resend.com
+# RESEND_API_KEY="re_xxxxx"
+
+# Email Addresses
+EMAIL_FROM="noreply@yourdomain.com"
+EMAIL_REPLY_TO="support@yourdomain.com"
+ADMIN_EMAIL="admin@yourdomain.com"
+
+# Note: In mock mode, emails are logged to console instead of being sent
 
 # OAuth Providers (optional)
 GITHUB_CLIENT_ID=""
